--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "fast-json-clone",
-  "version": "1.0.2",
-  "description": "Clone JSON value faster than the fastest",
-  "main": "index.js",
+  "name": "fast-clone-json",
+  "version": "1.0.0",
+  "description": "Clone JSON value fast",
+  "main": "src/clone.js",
   "files": [
-    "index.js",
-    "index.d.ts",
+    "src/clone.js",
+    "src/clone.d.ts",
     "README.md",
     "LICENSE.txt"
   ],
@@ -13,15 +13,15 @@
     "build": "tsc -p .",
     "watch": "tsc -p . -w",
     "test": "tsc -p . && mocha test",
-    "bench": "tsc -p . && node bench/index.js",
-    "prettier": "prettier -w '**/*.ts'",
+    "bench": "tsc -p . && node bench/clone.js",
+    "prettier": "prettier -w \"**/*.ts\"",
     "check:ts": "tsc -p . --noEmit",
-    "check:prettier": "prettier --check '**/*.ts'",
+    "check:prettier": "prettier --check \"**/*.ts\"",
     "check": "npm run check:ts && npm run check:prettier"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rhysd/fast-json-clone.git"
+    "url": "git+https://github.com/Milly/fast-clone-json.git"
   },
   "keywords": [
     "JSON",
@@ -30,12 +30,12 @@
     "deepcopy",
     "copy"
   ],
-  "author": "rhysd <lin90162@yahoo.co.jp> (https://rhysd.github.io/)",
+  "author": "Milly <milly.ca@gmail.com>",
   "license": "CC0-1.0",
   "bugs": {
-    "url": "https://github.com/rhysd/fast-json-clone/issues"
+    "url": "https://github.com/Milly/fast-clone-json/issues"
   },
-  "homepage": "https://github.com/rhysd/fast-json-clone#readme",
+  "homepage": "https://github.com/Milly/fast-clone-json#readme",
   "devDependencies": {
     "@types/benchmark": "^2.1.2",
     "@types/clone-deep": "^4.0.1",
@@ -46,12 +46,13 @@
     "@ungap/structured-clone": "^1.0.1",
     "benchmark": "^2.1.4",
     "clone-deep": "^4.0.1",
+    "fast-json-clone": "^1.0.2",
     "fastest-json-copy": "^1.0.1",
     "lodash.clonedeep": "^4.5.0",
     "microtime": "^3.1.1",
-    "mocha": "^10.1.0",
-    "prettier": "^2.7.1",
+    "mocha": "^10.2.0",
+    "prettier": "^2.8.7",
     "rfdc": "^1.3.0",
-    "typescript": "^4.8.4"
+    "typescript": "^5.0.3"
   }
 }
